z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ header{
     position: fixed;
     top: 0px;
     background-color: white;
+    z-index: 1;
 }
 
 header .row{
